--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,4 @@ tzlocal==5.2 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
 win32-setctime==1.1.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
 yarl==1.9.4 ; python_version >= "3.11" and python_version < "4.0"
+Flask
